update doc and add json comment
